fixing wrapping of long username before library slug in manage lib popup

--- a/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
+++ b/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
@@ -130,6 +130,7 @@ textarea.manage-lib-input
 .manage-lib-slug-1
   display: table-cell
   width: 1%
+  white-space: nowrap
   color: secondaryTextGray
 
 .manage-lib-slug-2
